--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,26 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
+
+    <string name="facebook_application_id">1274279372716571</string>
+
+    <!-- Strings related to login -->
+    <string name="default_web_client_id" translatable="false">CHANGE-ME</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
+    <string name="login_connect">Connect</string>
+    <string name="welcome_to_my_app">Welcome to my running app</string>
+    <string name="register">Register</string>
+    <string name="login">login</string>
+    <string name="title_activity_core">CoreActivity</string>
+
+
 </resources>
